# CSC8503

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  CSC8503.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.ninja
.cmake/api/v1/reply/: cache-v2-377a3daab6dbaeb0efdf.json  cache-v2-d457662fdac60dc01363.json  cmakeFiles-v1-9678896a114e734a7820.json  cmakeFiles-v1-a032b5b14ced397d995d.json  codemodel-v2-c5bc70a96dab67de7106.json  directory-CSC8503CoreClasses-Debug-2ee4de21ed7b040fd2ce.json  directory-NCLCoreClasses-Debug-f2db015ae7922231cd93.json  index-2023-11-22T14-39-21-0298.json  index-2023-11-25T14-02-42-0538.json  target-CSC8503-Debug-96cca853075697ece77e.json  target-CSC8503CoreClasses-Debug-30eb9f50a9b3565d20d1.json  target-NCLCoreClasses-Debug-fd7d8e21dd3a7470db6a.json  target-OpenGLRendering-Debug-5e426f0f1a35976887b7.json  toolchains-v1-c1f5b8a1cd12d8490473.json
Assets/Data/: TestGrid1.txt  TestGrid2.txt  TestGrid3.txt
Assets/Meshes/: Goat.mat  Goat.msh  Highrise_18.mat  Highrise_18.msh  Keeper.msh  goose.mat  goose.msh
Assets/Shaders/VK/: Debug.frag  Debug.frag.spv  Debug.vert  Debug.vert.spv  DebugText.frag  DebugText.frag.spv  DebugText.vert  DebugText.vert.spv  Shadow.vert  Shadow.vert.spv  data.glslh  scene.frag  scene.frag.spv  scene.vert  scene.vert.spv  shadow.frag  shadow.frag.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
CSC8503/: CMakeLists.txt  CSC8503.vcxproj  CSC8503.vcxproj.filters  CWFollowCamera.cpp  CWFollowCamera.h  CylinderStateGameObject.cpp  CylinderStateGameObject.h  GameDoorObject.cpp  GameDoorObject.h  GameEnemyObject.cpp  GameEnemyObject.h  GameGooseObject.cpp  GameGooseObject.h  GamePlayerFollowCamera.cpp  GamePlayerFollowCamera.h  GamePlayerObject.cpp  GamePlayerObject.h  GameTechRenderer.cpp  GameTechRenderer.h  GameTechVulkanRenderer.cpp  GameTechVulkanRenderer.h  Main.cpp  MenuStates.cpp  MenuStates.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  OBBGameObject.cpp  OBBGameObject.h  SHADER_FILES.vcxproj  SHADER_FILES.vcxproj.filters  StateGameObject.cpp  StateGameObject.h  TutorialGame.cpp  TutorialGame.h
CSC8503CoreClasses/: AABBVolume.h  BehaviourAction.h  BehaviourNode.h  BehaviourNodeWithChildren.h  BehaviourSelector.cpp  BehaviourSelector.h  BehaviourSequence.cpp  BehaviourSequence.h  CMakeLists.txt  CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CapsuleVolume.cpp  CollisionDetection.cpp  CollisionDetection.h  Debug.cpp  Debug.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  NavigationGrid.cpp  NavigationGrid.h  NavigationMap.h  NavigationMesh.cpp  NavigationMesh.h  NavigationPath.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.h  OBBVolume.h  OrientationConstraint.cpp  OrientationConstraint.h  PhysicsObject.cpp  PhysicsObject.h  (+17 more)
NCLCoreClasses/: .gitignore  Assets.cpp  Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Frustum.cpp  Frustum.h  GameTimer.h  Keyboard.cpp  Keyboard.h  KeyboardMouseController.cpp  KeyboardMouseController.h  Maths.cpp  Maths.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  MeshAnimation.cpp  MeshAnimation.h  MeshMaterial.cpp  MeshMaterial.h  Mouse.cpp  Mouse.h  MshLoader.cpp  MshLoader.h  NewMatrix.h  NewVector.h  Plane.h  Quaternion.cpp  Quaternion.h  RendererBase.h  Shader.cpp  (+26 more)
OpenGLRendering/: CMakeLists.txt  OGLComputeShader.cpp  OGLComputeShader.h  OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OpenGLRendering.lib  OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters
OpenGLRendering/glad/: gl.c  gl.h  wgl.c  wgl.h
VulkanRendering/: .gitignore  CMakeLists.txt  SmartTypes.h  VulkanBufferBuilder.cpp  VulkanBufferBuilder.h  VulkanBuffers.cpp  VulkanBuffers.h  VulkanCompute.cpp  VulkanCompute.h  VulkanComputePipelineBuilder.cpp  VulkanComputePipelineBuilder.h  VulkanDescriptorSetLayoutBuilder.cpp  VulkanDescriptorSetLayoutBuilder.h  VulkanDynamicRenderBuilder.cpp  VulkanDynamicRenderBuilder.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPipelineBuilderBase.h  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderBuilder.cpp  VulkanShaderBuilder.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTextureBuilder.cpp  VulkanTextureBuilder.h  VulkanUtils.cpp  VulkanUtils.h
